remove default post

--- a/_posts/2023-12-01-welcome.md
+++ b/_posts/2023-12-01-welcome.md
@@ -3,6 +3,7 @@ title: "Introducing MechPy Docs!"
 author: omar
 date: 2023-12-01 10:46:44 +0000
 categories: mechpy documentation
+pin: true
 ---
 
 Welcome to the first post in the `MechPy Docs`! This blog is dedicated to sharing insights, tutorials, and updates related to mechanical engineering concepts and their applications in Python programming.
